# django-admin-data-from-external-service

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
dadfes/: admin.py  apps.py
demo/: Dockerfile  requirements.txt
demo/clickhouse/: apps.py  models.py
demo/demo/: middlewares.py  settings.py  urls.py
demo/github/: apps.py  models.py
tests/: settings.py  test_admin.py
tests/app/: models.py
